scrollbar gutter issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+
+
+html {
+  scrollbar-gutter: stable;
+}
+
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
